# tag_scraping_database

./: ".env"  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  Dockerfile.fastmcp  FASTMCP_INTEGRATION.md  LICENSE  README.md  REPORTING_WEBSITE_README.md  REPORTING_WEBSITE_SUMMARY.md  UNIFIED_PIPELINE_USAGE.md  create_demo_data.py  docker-compose.fastmcp.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  requirements_fastmcp.txt  run_async_pipeline.py  setup.cfg  start-reporting-website.sh  test_docker_setup.sh  test_performance.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  docker.yml
Documentation/: DATABASE_RELATIONSHIPS.md  DOCKER_DEPLOYMENT.md  POSTGRESQL_IMPLEMENTATION_SUMMARY.md  POWERBI_CONNECTION.md  PROJECT_OVERVIEW.md  README.md  SCHEMA.md
backend/: main.py  requirements.txt
docs/: CHANGELOG.md  CI_CD_GUIDE.md  CI_CD_RUNNER_CONFIGURATION.md  CLAUDE_AI_INTEGRATION.md  CLOUD_LAUNCH_GUIDE.md  DATABASE_RELATIONSHIPS.md  DATABASE_SCHEMA.md  DOCKER_DEPLOYMENT.md  DOCKER_HUB_SETUP.md  DOCKER_IMPLEMENTATION_SUMMARY.md  ENHANCED_DATABASE_SCHEMA.md  FASTMCP_INTEGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  POSTGRESQL_ENHANCEMENTS.md  POSTGRESQL_IMPLEMENTATION_SUMMARY.md  POWERBI_CONNECTION.md  PRE_COMMIT_SETUP.md  PROJECT_OVERVIEW.md  REPOSITORY_CLEANUP_SUMMARY.md  SCHEDULING_CONFIGURATION.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Analytics.tsx  Cards.tsx  Categories.tsx  Dashboard.tsx  Search.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: run.sh  run_pipeline.sh  run_quality_checks.sh
src/: FIVE_LEVEL_PIPELINE_IMPLEMENTATION.md  FOUR_LEVEL_PIPELINE_IMPLEMENTATION.md  MULTI_LEVEL_SCRAPING_SYSTEM.md  PIPELINE_SUMMARY.md  URL_EXTRACTION_SUMMARY.md  create_tables.py  db.py  fastmcp_client_example.py  fastmcp_config.py  fastmcp_server.py  mcp_server_official.py  models.py  setup_database.py  test_card_extraction.py  test_dynamic_discovery.py  test_five_level_pipeline.py  test_four_level_pipeline.py  test_multi_level_system.py  test_postgresql.py  test_postgresql_detection.py  test_unified_pipeline.py  test_url_extraction.py  validate_schema.py
src/mcp/: client.py  config.py  mcp_server_official.py  server.py
src/scraper/: async_client.py  async_db.py  async_pipeline.py  async_scraper.py  audit.py  bulk_db_operations.py  cache_manager.py  card_crawler.py  card_detail_crawler.py  card_grade_rows_scraper.py  cards_scraper.py  crawler.py  db_helpers.py  enhanced_sets_scraper.py  monitoring.py  multi_level_orchestrator.py  multi_runner_orchestrator.py  new_pipeline.py  normalizer.py  optimized_pipeline.py  paginator.py  pipeline.py  set_crawler.py  sport_years_scraper.py  unified_pipeline.py  url_builder.py  year_crawler.py
tests/: __init__.py  conftest.py  test_basic.py  test_card_extraction.py  test_core_functionality.py  test_db_helpers.py  test_dynamic_discovery.py  test_five_level_pipeline.py  test_four_level_pipeline.py  test_mcp.py  test_models.py  test_multi_level_system.py  test_pipeline.py  test_postgresql.py  test_postgresql_detection.py  test_unified_pipeline.py  test_url_extraction.py
